--- a/LVL42/homework/style.css
+++ b/LVL42/homework/style.css
@@ -60,9 +60,10 @@ p {
 }
 
 .clock-icon {
-    width: 20px;
+    width: 16px;
     vertical-align: middle;
     margin-left: 6px;
+    margin-bottom: 3px;
 }
 
 .clockp {
@@ -113,7 +114,6 @@ h3:hover {
     opacity: 0;
     transition: 0.5s;
     cursor: pointer;
-
 
 }
 
