--- a/LVL43/homework/style2.css
+++ b/LVL43/homework/style2.css
@@ -2,7 +2,7 @@
 
 body {
     font-family:"Red Hat Display";
-    background-color: #f5f5f5;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@ body {
 .card {
     background-color: white;
     border-radius: 15px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 20px black;
     width: 350px;
     overflow: hidden;
     text-align: center;
@@ -60,7 +60,7 @@ p.description {
     margin-right: 15px;
     width: 40px;
     height: 40px;
-    background-color: #e0e5ff;
+    background-color: white;
     border-radius: 50%;
     display: flex;
     justify-content: center;
